# sonic-sairedis

./: .bazelignore  BUILD.bazel  MODULE.bazel  common.bzl  config.bazel.h  create_config.bazel.sh
lib/: BUILD.bazel
meta/: BUILD.bazel
vslib/: BUILD.bazel
