package(default_visibility = ["//visibility:public"]) #TODO BL: This is probably too much visibility

load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@bazel_lib//lib:run_binary.bzl", "run_binary")
load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@bazel_lib//lib:write_source_files.bzl", "write_source_file")

copy_to_directory(
  name = "swss_common_headers",
  srcs = ["@sonic_swss_common//:hdrs"],
  out = "swss",
  root_paths = ["common"],
  include_external_repositories = ["*"],
)

sh_binary(
  name = "create_config",
  srcs = [":create_config.bazel.sh"],
)

run_binary(
  name = "create_config.gen",
  tool = ":create_config",
  args = ["$(execpath config.h.gen)"],
  outs = ["config.h.gen"],
  stamp = 1,
)

write_source_file(
    name = "config.bazel.h.update",
    out_file = "config.bazel.h",
    in_file = ":create_config.gen",
    diff_test_failure_message = "Bazel config header (config.bazel.h) out of date; please run {{TARGET}} to update."
)

# TODO BL: This depends on having run `bazel run //:config.bazel.h.update`.
# We should encode that invariant.
filegroup(
  name = "config",
  srcs = [":config.bazel.h"],
)
