module(name = "sonic-sairedis")

bazel_dep(name = "rules_perl", version = "0.5.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "rules_doxygen", version = "2.6.1")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# rules_doxygen can pull releases from GitHub, but 1.8.16 is too old to be there.
# We need to fetch it from sourceforge.
http_archive(
  name = "doxygen_release",
  urls = ["https://sourceforge.net/projects/doxygen/files/rel-1.8.16/doxygen-1.8.16.linux.bin.tar.gz/download"],
  sha256 = "610697eba6104110389d371e6908ed35b4b00f9e650c969a213dc0020b067a55",
  type = "tar.gz",
  strip_prefix = "doxygen-1.8.16",
  build_file_content = 'exports_files(["bin/doxygen"], ["//visibility:public"])',
)

doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension")
doxygen_extension.configuration(
  executable = "@doxygen_release//:bin/doxygen",
  platform = "linux",
)
use_repo(doxygen_extension, "doxygen")

bazel_dep(name = "sonic-build-infra", version = "0.0.0")
local_path_override(
    module_name = "sonic-build-infra",
    path = "../sonic-build-infra"
)

register_toolchains("@sonic-build-infra//toolchains/gcc:host_gcc_toolchain")

bazel_dep(name = "rules_distroless", version = "0.0.0")
local_path_override(
    module_name = "rules_distroless",
    path = "../../bazel-contrib/rules_distroless"
)

apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")

apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = ["bookworm", "bookworm-updates"],
    uris = ["https://snapshot.debian.org/archive/debian/20251001T023456Z"],
)

apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = ["bookworm-security"],
    uris = ["https://snapshot.debian.org/archive/debian-security/20251001T023456Z"],
)

bazel_dep(name = "sonic-swss-common", version = "0.0.0", repo_name = "sonic_swss_common")
local_path_override(
    module_name = "sonic-swss-common",
    path = "../../sonic-net/sonic-swss-common",
)

apt.install(
    dependency_set = "bookworm",
    suites = ["bookworm", "bookworm-updates"],
    packages = [
        # For this repo
        "libhiredis-dev",
        "libzmq3-dev",
        "python3-dev",
        "libboost-dev",
        "libboost-serialization-dev",
        "nlohmann-json3-dev",
        
        # For SAI
        "doxygen",
        "graphviz",
        "aspell",
    ]
)

apt.lock(into = ":packages.lock")

use_repo(apt, "bookworm")
