module(name = "sonic-sairedis")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "bazel_lib", version = "3.1.1")

bazel_dep(name = "sonic-build-infra", version = "0.0.0")
local_path_override(
    module_name = "sonic-build-infra",
    path = "../sonic-build-infra"
)

register_toolchains("@sonic-build-infra//toolchains/gcc:host_gcc_toolchain")

bazel_dep(name = "rules_distroless", version = "0.0.0")
local_path_override(
    module_name = "rules_distroless",
    path = "../../bazel-contrib/rules_distroless"
)

apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")

apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = ["bookworm", "bookworm-updates"],
    uris = ["https://snapshot.debian.org/archive/debian/20251001T023456Z"],
)

apt.sources_list(
    architectures = ["amd64"],
    components = ["main"],
    suites = ["bookworm-security"],
    uris = ["https://snapshot.debian.org/archive/debian-security/20251001T023456Z"],
)

bazel_dep(name = "sonic-swss-common", version = "0.0.0", repo_name = "sonic_swss_common")
local_path_override(
    module_name = "sonic-swss-common",
    path = "../../sonic-net/sonic-swss-common",
)

bazel_dep(name = "sai", version = "0.0.0")
local_path_override(
  module_name = "sai",
  path = "./SAI",
)

apt.install(
    dependency_set = "bookworm",
    suites = ["bookworm", "bookworm-updates"],
    packages = [
        # For this repo
        "libhiredis-dev",
        "libzmq3-dev",
        "python3-dev",
        "libboost-dev",
        "libboost-serialization-dev",
        "nlohmann-json3-dev",
    ]
)

apt.lock(into = ":packages.lock")

use_repo(apt, "bookworm")
